Fixed logos, about section.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Home</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Chris Fusting</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">We offer several core services.</h3>
+                    <h3 class="section-subheading text-muted">I offer several core services.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -95,7 +95,7 @@
                         <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science Contracting</h4>
-                    <p class="text-muted">We can help you turn your data into actionable insights. Whether you're trying to maximize profit or add cutting edge quantitative methods into your research, we can help.</p>
+                    <p class="text-muted">I can turn your data into actionable insights. Whether you're trying to maximize profit or add cutting edge quantitative methods into your research, I can help.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -103,7 +103,7 @@
                         <i class="fa fa-area-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Data Science Consulting</h4>
-                    <p class="text-muted">Not sure what data science can do for your organization? We can help you understand what's possible. Once we've identified a target we can advise you on how to build data gathering and analysis systems to enable your organization to run more efficiently and profitably.</p>
+                    <p class="text-muted">Not sure what data science can do for your organization? I can help you understand what's possible. Once I've identified a target I can advise you on how to build data gathering and analysis systems to enable your organization to run more efficiently and profitably.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -111,7 +111,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Technology Consulting</h4>
-                    <p class="text-muted">Building technology? We can help you determine the appropriate languages, databases, and cloud resources that will get you on the right track from day one.</p>
+                    <p class="text-muted">Building technology? I can help you determine the appropriate languages, databases, and cloud resources that will get you on the right track from day one.</p>
                 </div>
             </div>
         </div>
@@ -214,85 +214,38 @@
             </div>
         </div>
     </section>
-
+            
     <!-- About Section -->
     <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Chris Fusting</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
-                    </ul>
+                <div class="col-md-4"></div>
+                <div class="col-md-4">
+                  <img src="img/about/me.jpg" class="me img-responsive img-centered" alt="Chris Fusting">
                 </div>
+                <div class="col-md-4"></div>
             </div>
+            <div class="buttons">
+            <div class="row">
+              <div class="col-md-4"></div>
+              <div class="col-md-4">
+                  <ul class="list-inline social-buttons">
+                      <li><a href="https://twitter.com/cfusting" target="_blank"><i class="fa fa-twitter"></i></a>
+                      </li>
+                      <li><a href="https://www.linkedin.com/in/cfusting" target="_blank"><i class="fa fa-linkedin"></i></a>
+                      </li>
+                      <li><a href="https://github.com/cfusting" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+                  </ul>
+              </div>
+              <div class="col-md-4"></div>
+            </div>
+          </div>
         </div>
     </section>
 
@@ -301,28 +254,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img src="img/logos/aquent.png" class="img-responsive img-centered" alt="">
-                    </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img src="img/logos/uvm.svg" class="img-responsive img-centered" alt="">
-                    </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img src="img/logos/forest.png" class="img-responsive img-centered" alt="">
-                    </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img src="img/logos/wp.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
                         <img src="img/logos/nemac.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                        <img src="img/logos/rdi3.png" class="img-responsive img-centered" alt="">
                 </div>
             </div>
         </div>
@@ -331,20 +280,10 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Your Website 2016</span>
+                <div class="col-md-6">
+                    <span class="copyright">Copyright &copy; Fusting Consulting 2017</span>
                 </div>
-                <div class="col-md-4">
-                    <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <ul class="list-inline quicklinks">
                         <li><a href="#">Privacy Policy</a>
                         </li>
