--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="col-md-3"></div>
               <div class="col-md-6">
                 <p class="text-muted">
-                I enjoy helping people understand what cuttiing edge machine learning and technology can do for them. When you hire me as a contractor or consultant your're not just hiring a pair of extra hands, you're hiring a strategic thinker who's looking out for your interests. I work under and agile methodology which means transparent planning, communication, and timelines are my status quo.
+                I enjoy helping people understand what cutting edge machine learning and technology can do for them. When you hire me as a contractor or consultant you're not just hiring a pair of extra hands, you're hiring a strategic thinker who's looking out for your interests. I work under and agile methodology which means transparent planning, communication, and timelines are my status quo.
                 </p>
               </div>
               <div class="col-md-3"></div>
@@ -383,7 +383,7 @@
                                 <p>
                                   I created a full-stack system to ingest crop yield and satellite data, perform data validation and error checking, and automate the modeling process. The system automated data ingestion, modeling, and reporting. I researched additionally statistical methods and data sources to enhance the accuracy and robustness of the models. Although the details of this work are proprietary, some of the challenges I faced and overcame include:
                                   <ul>
-                                    <li>Bad quality and missing crop yield data in many reagions.</li>
+                                    <li>Bad quality and missing crop yield data in many regions.</li>
                                     <li>Limited training data for high impact events.</li>
                                     <li>Non-linearity of crop growth.</li>
                                   </ul>
