Added high res header

--- a/index.html
+++ b/index.html
@@ -193,10 +193,29 @@
               <div class="col-md-3"></div>
               <div class="col-md-6">
                 <p class="text-muted">
-                I enjoy helping people understand what cutting edge machine learning and technology can do for them. When you hire me as a contractor or consultant you're not just hiring a pair of extra hands, you're hiring a strategic thinker who's looking out for your interests. I work under and agile methodology which means transparent planning, communication, and timelines are my status quo.
+                I enjoy helping people understand what cutting edge machine learning and technology can do for them. When you hire me as a contractor or consultant you're not just hiring a pair of extra hands, you're hiring a strategic thinker who's looking out for your interests. I work under an agile methodology which means transparent planning, communication, and timelines are my status quo.
                 </p>
               </div>
               <div class="col-md-3"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                  <h4>Contact Information</h4>
+                  <p class="text-muted">
+                    Email: cfusting@gmail.com
+                  </p>
+                </div>
+              </div>
+             <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                  <p class="text-muted">
+                    phone: 828-772-0012
+                  </p>
+                </div>
+                <div class="col-md-3"></div>
+                <div class="col-md-3"></div>
             </div>
             <div class="buttons">
             <div class="row">
@@ -343,11 +362,6 @@
                                    <li id="lc-1">Greenness 15. Arctic Program Available at: http://arctic.noaa.gov/Report-Card/Report-Card-2015/ArtMID/5037/ArticleID/221/Tundra-Greenness. (Accessed: 25th January 2017)</li>
                                   <li id="lc-2">Bjerke, J. W. et al. Record-low primary productivity and high plant damage in the Nordic Arctic Region in 2012 caused by multiple weather events and pest outbreaks. Environ. Res. Lett. 9, 84006 (2014).</li>
                                 </ol>
-                                <ul class="list-inline social-buttons buttons">
-                                  <li>
-                                    <a href="https://github.com/cfusting/arctic-browning" target="_blank"><i class="fa fa-github-alt"></i></a>
-                                  </li>
-                                </ul>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
