--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="col-md-6">
                   <h4>Contact Information</h4>
                   <p class="text-muted">
-                    Email: cfusting@gmail.com
+                  Email: <a href="mailto:cfusting@gmail.com">cfusting@gmail.com</a>
                   </p>
                 </div>
               </div>
@@ -211,7 +211,7 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
                   <p class="text-muted">
-                    phone: 828-772-0012
+                  Phone: <a href="tel:828-772-0012">828-772-0012</a>
                   </p>
                 </div>
                 <div class="col-md-3"></div>
@@ -240,11 +240,15 @@
             </div>
           </div>
         </div>
-    </section>
 
     <!-- Clients Aside -->
     <aside class="clients">
         <div class="container">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+                <h4 class="section-heading">Organizations I've worked with</h4>
+            </div>
+          </div>
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                         <img src="img/logos/aquent.png" class="img-responsive img-centered" alt="">
@@ -273,20 +277,13 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-12">
                     <span class="copyright">Copyright &copy; Fusting Consulting 2017</span>
                 </div>
-                <div class="col-md-6">
-                    <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
-                        </li>
-                        <li><a href="#">Terms of Use</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+           </div>
         </div>
     </footer>
+    </section>
 
     <!-- Portfolio Modals -->
     <!-- Use the modals below to showcase details about your portfolio projects! -->
