Added better picture of myself

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div id="contact" class="row text-centered">
                 <div class="col-md-4"></div>
                 <div class="col-md-4">
-                  <img src="img/about/me.jpg" class="me img-responsive img-centered" alt="Chris Fusting">
+                  <img src="img/about/off-center.jpg" class="me img-responsive img-centered" alt="Chris Fusting">
                 </div>
                 <div class="col-md-4"></div>
             </div>
