Updated skill cluster descriptoin

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                 <h2>Skill Clusters</h2>
                                 <p class="item-intro text-muted">Discovering emerging skill-sets in the gig economy.</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/skillsegments-free.jpg" alt="">
-                                <p>Project description.</p>
+                                <p>Project description pending client review for proprietary information. Check back later!</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
