--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <div class="col-md-6">
                   <h4>Contact Information</h4>
                   <p class="text-muted">
-                  Email: <a href="mailto:cfusting@gmail.com">cfusting@gmail.com</a>
+                  Email: <a href="mailto:chris@chrisfusting.com">chris@chrisfusting.com</a>
                   </p>
                 </div>
               </div>
